# ctac

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
src/ctac/: __init__.py  builtins.py  tracing.py
src/ctac/analysis/: __init__.py  defuse.py  expr_walk.py  framework.py  model.py  normalize.py  passes.py  slice.py  symbols.py  type_infer.py
src/ctac/ast/: __init__.py  bit_mask.py  highlight.py  models.py  nodes.py  ops.py  parse_cmd.py  parse_expr.py  pretty.py  range_constraints.py  run_format.py  subst.py  visitor.py
tests/: test_abs_int_framework.py  test_abs_int_poly_deg.py  test_absint_cli.py  test_absint_interval_cli.py  test_analysis_remove_true_asserts.py  test_analysis_symbol_sorts.py  test_ast_subst.py  test_bb_diff_truncate.py  test_bit_mask.py  test_cfg_filters.py  test_cfg_match.py  test_cfg_model_class.py  test_cfg_order.py  test_cfg_style_blocks.py  test_cfg_text.py  test_cli_completion.py  test_dataflow_framework.py  test_dsa_split_storage.py  test_eval_memory.py  test_explain_var.py  test_interpreter.py  test_interval_domain.py  test_interval_materialize.py  test_materialize_assumes.py  test_model_parse.py  test_op_diff.py  test_parse_example_smoke.py  test_parse_minimal.py  test_parse_sbf.py  test_pin_apply.py  test_pin_cli.py  test_pin_enumerate.py  test_pin_manifest.py  test_pin_naming.py  test_pin_phase1.py  test_pin_phase2.py  test_pin_regression.py  test_pp_cli.py  test_pp_terminator.py  test_pretty_printers.py  (+62 more)
tools/vscode-tac/: README.md  extension.js  justfile  language-configuration.json  package.json
(+158 files in other folders)
